--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,54 @@
-<div [dir]="dir" class="container mt-3">
-  <div class="d-flex">
-    <button class="btn btn-primary mx-2" (click)="switchLanguage()">
-      Switch Language
-    </button>
-
-    <h3 class="text-danger">
-      {{ "formly" | uppercase }}
-    </h3>
+<div [dir]="dir">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" routerLink="basic">Formly</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              routerLinkActive="active"
+              aria-current="page"
+              routerLink="basic"
+              >Formly Basics</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLinkActive="active" routerLink="jsonForms"
+              >json Forms</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              routerLinkActive="active"
+              routerLink="jsonSchema"
+              >json Schema</a
+            >
+          </li>
+        </ul>
+        <button
+          class="btn btn-sm btn-primary ms-auto"
+          (click)="switchLanguage()"
+        >
+          Switch Language
+        </button>
+      </div>
+    </div>
+  </nav>
+  <div class="container mt-3">
+    <router-outlet></router-outlet>
+    <!-- <app-formaly></app-formaly> -->
   </div>
-
-  <app-formaly></app-formaly>
 </div>
